@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.port.hu"
        name="Port.hu"
-       version="1.0.3"
+       version="1.0.7"
        provider-name="Bence Nádas (olympia)">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.0"/>
-    <import addon="metadata.common.movieposterdb.com" version="1.0"/>
-    <import addon="metadata.common.imdb.com" version="1.0"/>
-    <import addon="metadata.common.impa.com" version="1.0"/>
+    <import addon="metadata.common.themoviedb.org" version="1.0.3"/>
+    <import addon="metadata.common.movieposterdb.com" version="1.0.2"/>
+    <import addon="metadata.common.imdb.com" version="1.0.4"/>
+    <import addon="metadata.common.impa.com" version="1.0.2"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
